# avito_tech_api

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
announcement_dj_pj/: .coverage  .env  manage.py  pytest.ini
announcement_dj_pj/announcement_api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
announcement_dj_pj/announcement_api/migrations/: 0001_initial.py  0002_ad_data.py  0003_rename_data_ad_created_at.py
announcement_dj_pj/announcement_dj_pj/: asgi.py  settings.py  urls.py  wsgi.py
announcement_dj_pj/tests/: conftest.py
announcement_dj_pj/tests/announcement_api/: test_views.py
